[gd_scene load_steps=2 format=3 uid="uid://cr0vibycwhxjl"]

[ext_resource type="Script" path="res://script/main_menu.gd" id="1_l6cm7"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_l6cm7")

[node name="ButtonManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Play" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 460.0
offset_top = 198.0
offset_right = 710.0
offset_bottom = 298.0
text = "Chơi"

[node name="Load" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 460.0
offset_top = 316.0
offset_right = 710.0
offset_bottom = 416.0
text = "Tải"

[node name="Exit" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 460.0
offset_top = 435.0
offset_right = 710.0
offset_bottom = 535.0
text = "Thoát"

[connection signal="pressed" from="ButtonManager/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ButtonManager/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="ButtonManager/Exit" to="." method="_on_exit_pressed"]
